[package]
name = "cdd-harness"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
homepage = "https://compilers.com.au"
readme = "README.md"
repository = "https://github.com/offscale/cdd-harness"
description = "Integration test harness framework for Compiler Driven Development (CDD)."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cdd = { git = "https://github.com/offscale/cdd-core" }
failure = "0.1.6"
ws = "0.9.1"
websocket = "0.24.0"
